--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,12 @@
 			<artifactId>guava</artifactId>
 			<version>23.0</version>
 		</dependency>
-    </dependencies>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.9.7</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
